# Neobis_Mobi_Market

./: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
mobi_market/: manage.py
mobi_market/mobi_market/: asgi.py  settings.py  urls.py  wsgi.py
mobi_market/products/: endpoints.py  models.py  serializers.py  urls.py
mobi_market/products/migrations/: 0001_initial.py
mobi_market/users/: endpoints.py  models.py  serializers.py  services.py  urls.py
mobi_market/users/migrations/: 0001_initial.py
